<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:src="@drawable/login_photo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@color/primary"
            android:textSize="30dp"
            android:textStyle="bold" />




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_input_hint"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
            app:startIconContentDescription="@string/login_email_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="0dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_input_hint"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconContentDescription="@string/login_password_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="0dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_text"
            android:textColor="@color/primary"
            android:textSize="10dp"
            android:textStyle="bold"
            android:layout_gravity="end"
            />


        <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="15dp"
        android:textAllCaps="false"
        android:text="@string/login_submit_button_text"
        app:cornerRadius="5dp">

    </com.google.android.material.button.MaterialButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textColor="@color/primary"
            android:textSize="15dp"
            android:layout_gravity="center"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginGoogleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:textAllCaps="false"
            android:text="@string/login_submit_google_button_text"
            app:cornerRadius="5dp">

        </com.google.android.material.button.MaterialButton>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New to Logistics?"
                android:textColor="@color/primaryVariant"
                android:textSize="15dp"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/textRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register"
                android:textColor="@color/primary"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                />

        </LinearLayout>


    </LinearLayout>
</ScrollView>