<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/enterphoto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_title"
            android:textColor="@color/primary"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_description"
            android:textColor="@color/black"
            android:textSize="10dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/userPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="10dp"
            android:textStyle="bold" />




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpCodeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otp_input_code_hint"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_baseline_code_24"
            app:startIconContentDescription="@string/otp_input_code_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="0dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitCodeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="18dp"
            android:textAllCaps="false"
            android:text="@string/otp_submit_button_text"
            app:cornerRadius="5dp"
            >

        </com.google.android.material.button.MaterialButton>


    </LinearLayout>

</ScrollView>