<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/white"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="350dp"
                android:layout_height="250dp"
                android:src="@drawable/register_photo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textColor="@color/primary"
            android:textSize="30dp"
            android:textStyle="bold" />




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email_input_hint"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
            app:startIconContentDescription="@string/register_email_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="0dp"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_fullName_input_hint"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_baseline_face_24"
            app:startIconContentDescription="@string/register_fullName_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="0dp"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_mobile_input_hint"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_baseline_phone_24"
            app:startIconContentDescription="@string/register_mobile_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="0dp"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_description1"
                android:textColor="@color/primary"
                android:textSize="10dp"
                android:layout_gravity="start"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Term &amp; Conditions"
                android:textColor="@color/primary"
                android:textSize="10dp"
                android:textStyle="bold"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_description2"
                android:textColor="@color/primary"
                android:textSize="10dp"
                android:layout_gravity="start"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Privacy Policy"
                android:textColor="@color/primary"
                android:textSize="10dp"
                android:textStyle="bold"
                />


        </LinearLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:text="@string/register_title"
            app:cornerRadius="5dp">

        </com.google.android.material.button.MaterialButton>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Joined us before?"
                android:textColor="@color/primaryVariant"
                android:textSize="15dp"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/primary"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                />

        </LinearLayout>


    </LinearLayout>


</ScrollView>